# coil

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: main.yml
api/coreref/: index.html
api/protocols/: index.html
api/types/: index.html
coil/: __init__.py  _bindableclass.py  _bindings.py  _core.py  _runtime.py  bindings.py  runtime.py  utils.py
coil/protocols/: __init__.py  _bindable.py  _bound.py  _data_event_handler.py  bindable.py  bound.py  data_event_handler.py
coil/runtime/: __init__.py
coil/types/: __init__.py  _events.py  events.py
docs/: conf.py  index.md  index.rst
docs/_static/css/: autodoc.css
docs/api/: coreref.md  coreref.rst  index.rst  protocols.md  protocols.rst  types.md  types.rst
search/: search_index.json
tests/: conftest.py  test_bindableclass.py  test_bindings.py  test_core.py  test_runtime.py  test_types.py  test_utils.py
