[project]
name = "coil"
version = "0.1.0"
description = ""
authors = [
    {name = "Te-jé Rodgers", email = "tjd.rodgers@gmail.com"},
]
dependencies = [
    "aiostream>=0.4.4",
    "pytest-cov>=3.0.0",
]
requires-python = ">=3.10"
license = {file = "LICENSE"}

[project.urls]
Homepage = ""

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.931",
    "pytest>=7.0.1",
    "pytest-asyncio>=0.18.2",
    "pre-commit>=2.17.0",
    "pytest-cov>=3.0.0"]
[tool.pdm.scripts]
tests = "pytest --doctest-modules --cov coil/"
typecheck = "mypy"
post_install = "pre-commit install"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.10"
strict = true
files = "coil/**/*.py"

[[tool.mypy.overrides]]
module = "aiostream.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = "__pypackages__"
asyncio_mode = "strict"

[tool.coverage.report]
fail_under = 85

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
